@@ -1,556 +1,245 @@
 package com.ccb.datamigration.service;
 
-import com.ccb.common.api.PageQuery;
 import com.ccb.common.api.PageResult;
 import com.ccb.common.exception.BusinessException;
 import com.ccb.common.exception.ErrorCode;
 import com.ccb.security.model.AuthUser;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.jdbc.core.JdbcTemplate;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.*;
 import java.util.concurrent.ThreadLocalRandom;
 
-/**
- * 问题清单专属服务。
- * 复用 dm_asset 表，asset_type='ISSUE'，structured_data JSON 存储全部业务字段。
- * 支持多维度筛选、分页、批量新增、逻辑删除和回收站。
- */
+/** 独立问题清单服务：所有问题业务字段直接存储在 dm_issue。 */
 @Service
 public class IssueService {
-    private static final String ASSET_TYPE = "ISSUE";
-
-    private static final Set<String> GRANULARITIES = Set.of("PROJECT", "COMPONENT", "TABLE", "FIELD");
-    private static final Set<String> ISSUE_SOURCES = Set.of(
-            "MIGRATION_CHECK", "SIT_FEEDBACK", "UAT_FEEDBACK", "DATA_LINE_FEEDBACK",
-            "EXPERT_FEEDBACK", "RISK_IDENTIFICATION", "MIGRATION_RELEASE");
-    private static final Set<String> DEFECT_TYPES = Set.of(
-            "REQUIREMENT", "DESIGN", "CODING", "DATA_QUALITY", "CLEANUP",
-            "BUSINESS", "UNDERSTANDING", "PERFORMANCE", "MASKING", "OTHER");
-    private static final Set<String> FREQUENCIES = Set.of("CLASSIC", "HIGH_FREQ", "LOW_FREQ", "SINGLE_CASE");
+    private static final Set<Integer> PAGE_SIZES = Set.of(20, 50, 100);
 
     private final JdbcTemplate jdbc;
-    private final ObjectMapper objectMapper;
     private final DataMigrationPermissionService permissions;
+    private final DataMigrationCodeValueService codeValues;
 
-    public IssueService(JdbcTemplate jdbc, ObjectMapper objectMapper, DataMigrationPermissionService permissions) {
+    public IssueService(JdbcTemplate jdbc, DataMigrationPermissionService permissions, DataMigrationCodeValueService codeValues) {
         this.jdbc = jdbc;
-        this.objectMapper = objectMapper;
         this.permissions = permissions;
+        this.codeValues = codeValues;
     }
 
-    /**
-     * 分页查询问题清单列表
-     */
-    public PageResult<Map<String, Object>> list(Long projectId, String granularity, String systemCode,
-                                                 String issueSource, String defectType, String frequency,
-                                                 String keyword, int page, int size, AuthUser user) {
-        StringBuilder sql = new StringBuilder(
-                "SELECT a.id, a.project_id, p.project_name, a.asset_code, a.asset_name, a.structured_data, "
-                        + "a.owner_id, a.created_at, a.updated_at, a.created_by, a.updated_by, "
-                        + "u1.display_name AS created_by_name, u2.display_name AS updated_by_name "
-                        + "FROM dm_asset a "
-                        + "LEFT JOIN pm_project p ON a.project_id = p.id AND p.tenant_id = a.tenant_id AND p.deleted = 0 "
-                        + "LEFT JOIN sys_user u1 ON u1.id = a.created_by AND u1.tenant_id = a.tenant_id "
-                        + "LEFT JOIN sys_user u2 ON u2.id = a.updated_by AND u2.tenant_id = a.tenant_id "
-                        + "WHERE a.tenant_id = ? AND a.asset_type = '" + ASSET_TYPE + "' AND a.deleted = 0");
+    public PageResult<Map<String, Object>> list(Long projectId, String granularity, String systemCode, String issueSource, String defectType, String frequency, String keyword, int page, int size, AuthUser user) {
+        long scope = permissions.requireProject(projectId, user);
+        StringBuilder sql = new StringBuilder(baseSelect(false));
         List<Object> args = new ArrayList<>(List.of(user.tenantId()));
-
-        if (projectId != null) {
-            sql.append(" AND a.project_id = ?");
-            args.add(projectId);
-        }
-        if (granularity != null && !granularity.isBlank() && GRANULARITIES.contains(granularity)) {
-            sql.append(" AND JSON_UNQUOTE(JSON_EXTRACT(a.structured_data, '$.granularity')) = ?");
-            args.add(granularity);
-        }
-        if (systemCode != null && !systemCode.isBlank()) {
-            sql.append(" AND JSON_UNQUOTE(JSON_EXTRACT(a.structured_data, '$.systemCode')) LIKE ?");
-            args.add("%" + systemCode.trim() + "%");
-        }
-        if (issueSource != null && !issueSource.isBlank() && ISSUE_SOURCES.contains(issueSource)) {
-            sql.append(" AND JSON_UNQUOTE(JSON_EXTRACT(a.structured_data, '$.issueSource')) = ?");
-            args.add(issueSource);
-        }
-        if (defectType != null && !defectType.isBlank() && DEFECT_TYPES.contains(defectType)) {
-            sql.append(" AND JSON_UNQUOTE(JSON_EXTRACT(a.structured_data, '$.defectType')) = ?");
-            args.add(defectType);
-        }
-        if (frequency != null && !frequency.isBlank() && FREQUENCIES.contains(frequency)) {
-            sql.append(" AND JSON_UNQUOTE(JSON_EXTRACT(a.structured_data, '$.frequency')) = ?");
-            args.add(frequency);
-        }
-        if (keyword != null && !keyword.isBlank()) {
-            String value = "%" + keyword.trim() + "%";
-            sql.append(" AND (a.asset_code LIKE ? OR a.asset_name LIKE ? "
-                    + "OR JSON_UNQUOTE(JSON_EXTRACT(a.structured_data, '$.issueDescription')) LIKE ? "
-                    + "OR JSON_UNQUOTE(JSON_EXTRACT(a.structured_data, '$.solution')) LIKE ? "
-                    + "OR JSON_UNQUOTE(JSON_EXTRACT(a.structured_data, '$.meetingConclusion')) LIKE ? "
-                    + "OR JSON_UNQUOTE(JSON_EXTRACT(a.structured_data, '$.processingSteps')) LIKE ? "
-                    + "OR JSON_UNQUOTE(JSON_EXTRACT(a.structured_data, '$.relatedMeetingMinutes')) LIKE ? "
-                    + "OR JSON_UNQUOTE(JSON_EXTRACT(a.structured_data, '$.relatedTables')) LIKE ? "
-                    + "OR JSON_UNQUOTE(JSON_EXTRACT(a.structured_data, '$.relatedFields')) LIKE ?)");
-            for (int i = 0; i < 9; i++) args.add(value);
-        }
-
-        String countSql = "SELECT COUNT(*) FROM (" + sql + ") t";
-        Long total = jdbc.queryForObject(countSql, Long.class, args.toArray());
-        if (total == null) total = 0L;
-
-        sql.append(" ORDER BY a.updated_at DESC, a.id DESC LIMIT ? OFFSET ?");
-        args.add(size);
-        args.add((page - 1) * size);
-
-        List<Map<String, Object>> records = jdbc.queryForList(sql.toString(), args.toArray());
-        return new PageResult<>(records, total, page, size);
+        appendFilters(sql, args, scope, granularity, systemCode, issueSource, defectType, frequency, keyword, false);
+        Long total = jdbc.queryForObject("SELECT COUNT(*) FROM (" + sql + ") t", Long.class, args.toArray());
+        int safePage = Math.max(1, page);
+        int safeSize = normalizePageSize(size);
+        sql.append(" ORDER BY i.updated_at DESC, i.id DESC LIMIT ? OFFSET ?"); args.add(safeSize); args.add((safePage - 1) * safeSize);
+        return new PageResult<>(jdbc.queryForList(sql.toString(), args.toArray()), total == null ? 0L : total, safePage, safeSize);
     }
 
-    /**
-     * 获取单条问题详情
-     */
     public Map<String, Object> findById(long id, AuthUser user) {
-        return findByIdInternal(id, user.tenantId(), false);
+        Map<String, Object> row = findByIdInternal(id, user.tenantId(), false);
+        permissions.requireStoredProject(row.get("project_id"), user);
+        return row;
     }
 
-    /**
-     * 单条新增问题
-     */
     @Transactional
     public Map<String, Object> create(Map<String, Object> body, AuthUser user) {
-        long projectId = number(body.get("projectId"), "projectId");
-        ensureProject(projectId, user);
-        String issueCode = text(body.get("issueCode"), "issueCode");
-        String issueName = text(body.get("issueName"), "issueName");
-
-        // 问题编号同一项目下不允许重复
-        if (exists("SELECT COUNT(*) FROM dm_asset WHERE tenant_id = ? AND project_id = ? AND asset_type = ? AND asset_code = ? AND deleted = 0",
-                user.tenantId(), projectId, ASSET_TYPE, issueCode)) {
-            throw new BusinessException(ErrorCode.CONFLICT, "问题编号在该项目下已存在");
-        }
-
-        Map<String, Object> structuredData = buildStructuredData(body);
-
+        long projectId = number(body.get("projectId"), "projectId"); ensureProject(projectId, user);
+        String code = text(body.get("issueCode"), "issueCode"); String name = text(body.get("issueName"), "issueName");
+        String systemCode = textOrNull(body.get("systemCode")); ensureSystemCode(projectId, systemCode, user);
+        ensureCodeAvailable(projectId, code, null, user); validateEnums(body, user);
         long id = nextId();
-        String structuredDataJson = json(structuredData);
-        jdbc.update("INSERT INTO dm_asset (id, tenant_id, project_id, asset_type, asset_code, asset_name, structured_data, owner_id, created_by, updated_by) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?)",
-                id, user.tenantId(), projectId, ASSET_TYPE, issueCode, issueName, structuredDataJson, user.id(), user.id(), user.id());
-        
-        // 保存关联会议纪要关系
-        saveMeetingRelations(id, body.get("relatedMeetingMinutes"), user);
-        // 保存关联表关系
-        saveTableRelations(id, body.get("relatedTables"), user);
-        // 保存关联字段关系
-        saveFieldRelations(id, body.get("relatedFields"), user);
-        
-        audit(user, "ISSUE_CREATE", id);
-        return findByIdInternal(id, user.tenantId(), false);
+        try {
+            jdbc.update("INSERT INTO dm_issue (id, tenant_id, project_id, issue_code, issue_name, granularity, system_code, issue_source, defect_type, issue_description, solution, meeting_conclusion, processing_steps, business_scenario, handler, responsible_party, keywords, frequency, owner_id, created_by, updated_by) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)",
+                    id, user.tenantId(), projectId, code, name, textOrNull(body.get("granularity")), systemCode, textOrNull(body.get("issueSource")), textOrNull(body.get("defectType")), textOrNull(body.get("issueDescription")), textOrNull(body.get("solution")), textOrNull(body.get("meetingConclusion")), textOrNull(body.get("processingSteps")), textOrNull(body.get("businessScenario")), textOrNull(body.get("handler")), textOrNull(body.get("responsibleParty")), keywords(body.get("keywords")), textOrNull(body.get("frequency")), user.id(), user.id(), user.id());
+        } catch (DataIntegrityViolationException ex) {
+            throw issueCodeConflict(ex);
+        }
+        saveRelations(id, projectId, body, user); audit(user, "ISSUE_CREATE", projectId, id); return findByIdInternal(id, user.tenantId(), false);
     }
 
-    /**
-     * 更新问题
-     */
     @Transactional
     public Map<String, Object> update(long id, Map<String, Object> body, AuthUser user) {
-        Map<String, Object> current = findByIdInternal(id, user.tenantId(), false);
-        permissions.requireWrite(user, ((Number) current.get("owner_id")).longValue());
-
-        long projectId = number(body.getOrDefault("projectId", current.get("project_id")), "projectId");
-        ensureProject(projectId, user);
-        String issueCode = text(body.getOrDefault("issueCode", current.get("asset_code")), "issueCode");
-        String issueName = text(body.getOrDefault("issueName", current.get("asset_name")), "issueName");
-
-        // 问题编号唯一性检查（排除自身）
-        if (exists("SELECT COUNT(*) FROM dm_asset WHERE tenant_id = ? AND project_id = ? AND asset_type = ? AND asset_code = ? AND deleted = 0 AND id <> ?",
-                user.tenantId(), projectId, ASSET_TYPE, issueCode, id)) {
-            throw new BusinessException(ErrorCode.CONFLICT, "问题编号在该项目下已存在");
+        Map<String, Object> current = findByIdInternal(id, user.tenantId(), false); permissions.requireWrite(user, ((Number) current.get("owner_id")).longValue());
+        // T32 决策 D2：维护操作的归属恒取库中记录，入参 projectId 一律忽略，UPDATE 不再包含 project_id
+        long projectId = permissions.requireStoredProject(current.get("project_id"), user);
+        String code = text(body.getOrDefault("issueCode", current.get("asset_code")), "issueCode"); String name = text(body.getOrDefault("issueName", current.get("asset_name")), "issueName");
+        String systemCode = textOrNull(body.get("systemCode")); ensureSystemCode(projectId, systemCode, user);
+        ensureCodeAvailable(projectId, code, id, user); validateEnums(body, user);
+        try {
+            int changed = jdbc.update("UPDATE dm_issue SET issue_code = ?, issue_name = ?, granularity = ?, system_code = ?, issue_source = ?, defect_type = ?, issue_description = ?, solution = ?, meeting_conclusion = ?, processing_steps = ?, business_scenario = ?, handler = ?, responsible_party = ?, keywords = ?, frequency = ?, updated_by = ?, updated_at = CURRENT_TIMESTAMP WHERE id = ? AND tenant_id = ? AND deleted = 0",
+                    code, name, textOrNull(body.get("granularity")), systemCode, textOrNull(body.get("issueSource")), textOrNull(body.get("defectType")), textOrNull(body.get("issueDescription")), textOrNull(body.get("solution")), textOrNull(body.get("meetingConclusion")), textOrNull(body.get("processingSteps")), textOrNull(body.get("businessScenario")), textOrNull(body.get("handler")), textOrNull(body.get("responsibleParty")), keywords(body.get("keywords")), textOrNull(body.get("frequency")), user.id(), id, user.tenantId());
+            if (changed != 1) throw new BusinessException(ErrorCode.CONFLICT, "问题状态已变化，请刷新后重试");
+        } catch (DataIntegrityViolationException ex) {
+            throw issueCodeConflict(ex);
         }
-
-        Map<String, Object> structuredData = buildStructuredData(body);
-
-        String structuredDataJson = json(structuredData);
-        jdbc.update("UPDATE dm_asset SET project_id = ?, asset_code = ?, asset_name = ?, structured_data = ?, updated_by = ?, updated_at = CURRENT_TIMESTAMP WHERE id = ? AND tenant_id = ? AND asset_type = ? AND deleted = 0",
-                projectId, issueCode, issueName, structuredDataJson, user.id(), id, user.tenantId(), ASSET_TYPE);
-        
-        // 更新关联会议纪要关系
-        saveMeetingRelations(id, body.get("relatedMeetingMinutes"), user);
-        // 更新关联表关系
-        saveTableRelations(id, body.get("relatedTables"), user);
-        // 更新关联字段关系
-        saveFieldRelations(id, body.get("relatedFields"), user);
-        
-        audit(user, "ISSUE_UPDATE", id);
-        return findByIdInternal(id, user.tenantId(), false);
+        saveRelations(id, projectId, body, user); audit(user, "ISSUE_UPDATE", projectId, id); return findByIdInternal(id, user.tenantId(), false);
     }
 
-    /**
-     * 批量逻辑删除
-     */
     @Transactional
     public void delete(List<Long> ids, AuthUser user) {
-        for (Long id : ids) {
-            Map<String, Object> existing = findByIdInternal(id, user.tenantId(), false);
-            permissions.requireWrite(user, ((Number) existing.get("owner_id")).longValue());
-            jdbc.update("UPDATE dm_asset SET deleted = 1, deleted_by = ?, deleted_at = CURRENT_TIMESTAMP WHERE id = ? AND tenant_id = ? AND asset_type = ? AND deleted = 0",
-                    user.id(), id, user.tenantId(), ASSET_TYPE);
-            audit(user, "ISSUE_DELETE", id);
+        for (Long id : normalizeIds(ids)) {
+            Map<String, Object> row = findByIdInternal(id, user.tenantId(), false);
+            long projectId = permissions.requireStoredProject(row.get("project_id"), user);
+            permissions.requireWrite(user, ((Number) row.get("owner_id")).longValue());
+            int changed = jdbc.update("UPDATE dm_issue SET deleted = 1, deleted_by = ?, deleted_at = CURRENT_TIMESTAMP WHERE id = ? AND tenant_id = ? AND deleted = 0", user.id(), id, user.tenantId());
+            if (changed != 1) throw new BusinessException(ErrorCode.CONFLICT, "问题状态已变化，请刷新后重试");
+            audit(user, "ISSUE_DELETE", projectId, id);
         }
     }
 
-    /**
-     * 回收站列表
-     */
     public PageResult<Map<String, Object>> recycleBinList(Long projectId, String keyword, int page, int size, AuthUser user) {
-        permissions.requireAdmin(user);
-
-        StringBuilder sql = new StringBuilder(
-                "SELECT a.id, a.project_id, p.project_name, a.asset_code, a.asset_name, a.structured_data, "
-                        + "a.owner_id, a.created_at, a.updated_at, a.deleted_by, a.deleted_at, "
-                        + "u3.display_name AS deleted_by_name "
-                        + "FROM dm_asset a "
-                        + "LEFT JOIN pm_project p ON a.project_id = p.id AND p.tenant_id = a.tenant_id AND p.deleted = 0 "
-                        + "LEFT JOIN sys_user u3 ON u3.id = a.deleted_by AND u3.tenant_id = a.tenant_id "
-                        + "WHERE a.tenant_id = ? AND a.asset_type = '" + ASSET_TYPE + "' AND a.deleted = 1");
-        List<Object> args = new ArrayList<>(List.of(user.tenantId()));
-
-        if (projectId != null) {
-            sql.append(" AND a.project_id = ?");
-            args.add(projectId);
-        }
-        if (keyword != null && !keyword.isBlank()) {
-            String value = "%" + keyword.trim() + "%";
-            sql.append(" AND (a.asset_code LIKE ? OR a.asset_name LIKE ?)");
-            args.add(value);
-            args.add(value);
-        }
-
-        String countSql = "SELECT COUNT(*) FROM (" + sql + ") t";
-        Long total = jdbc.queryForObject(countSql, Long.class, args.toArray());
-        if (total == null) total = 0L;
-
-        sql.append(" ORDER BY a.deleted_at DESC, a.id DESC LIMIT ? OFFSET ?");
-        args.add(size);
-        args.add((page - 1) * size);
-
-        List<Map<String, Object>> records = jdbc.queryForList(sql.toString(), args.toArray());
-        return new PageResult<>(records, total, page, size);
+        permissions.requireAdmin(user); long scope = permissions.requireProject(projectId, user); StringBuilder sql = new StringBuilder(baseSelect(true)); List<Object> args = new ArrayList<>(List.of(user.tenantId()));
+        appendFilters(sql, args, scope, null, null, null, null, null, keyword, true); Long total = jdbc.queryForObject("SELECT COUNT(*) FROM (" + sql + ") t", Long.class, args.toArray());
+        int safePage = Math.max(1, page); int safeSize = normalizePageSize(size); sql.append(" ORDER BY i.deleted_at DESC, i.id DESC LIMIT ? OFFSET ?"); args.add(safeSize); args.add((safePage - 1) * safeSize);
+        return new PageResult<>(jdbc.queryForList(sql.toString(), args.toArray()), total == null ? 0L : total, safePage, safeSize);
     }
 
-    /**
-     * 恢复
-     */
     @Transactional
     public void restore(List<Long> ids, AuthUser user) {
         permissions.requireAdmin(user);
-        for (Long id : ids) {
-            jdbc.update("UPDATE dm_asset SET deleted = 0, deleted_by = NULL, deleted_at = NULL WHERE id = ? AND tenant_id = ? AND asset_type = ? AND deleted = 1",
-                    id, user.tenantId(), ASSET_TYPE);
-            audit(user, "ISSUE_RESTORE", id);
+        List<Long> restoreIds = normalizeIds(ids);
+        Map<Long, Long> projectIds = new HashMap<>();
+        for (Long id : restoreIds) {
+            Map<String, Object> row = findByIdInternal(id, user.tenantId(), true);
+            long projectId = permissions.requireStoredProject(row.get("project_id"), user);
+            ensureCodeAvailable(projectId, String.valueOf(row.get("asset_code")), id, user);
+            projectIds.put(id, projectId);
+        }
+        for (int index = 0; index < restoreIds.size(); index++) {
+            Long id = restoreIds.get(index);
+            try {
+                int changed = jdbc.update("UPDATE dm_issue SET deleted = 0, deleted_by = NULL, deleted_at = NULL, updated_by = ?, updated_at = CURRENT_TIMESTAMP WHERE id = ? AND tenant_id = ? AND deleted = 1", user.id(), id, user.tenantId());
+                if (changed != 1) throw new BusinessException(ErrorCode.CONFLICT, "问题状态已变化，请刷新后重试");
+            } catch (DataIntegrityViolationException ex) {
+                throw issueCodeConflict(ex);
+            }
+            audit(user, "ISSUE_RESTORE", projectIds.get(id), id);
         }
     }
 
-    /**
-     * 彻底删除
-     */
     @Transactional
     public void purge(List<Long> ids, AuthUser user) {
         permissions.requireAdmin(user);
-        for (Long id : ids) {
-            jdbc.update("DELETE FROM dm_asset WHERE id = ? AND tenant_id = ? AND asset_type = ? AND deleted = 1",
-                    id, user.tenantId(), ASSET_TYPE);
-            audit(user, "ISSUE_PURGE", id);
+        List<Long> purgeIds = normalizeIds(ids);
+        Map<Long, Long> projectIds = new HashMap<>();
+        for (Long id : purgeIds) {
+            Map<String, Object> row = findByIdInternal(id, user.tenantId(), true);
+            long projectId = permissions.requireStoredProject(row.get("project_id"), user);
+            projectIds.put(id, projectId);
+        }
+        for (Long id : purgeIds) {
+            jdbc.update("DELETE FROM dm_issue_relation WHERE tenant_id = ? AND issue_id = ?", user.tenantId(), id);
+            int changed = jdbc.update("DELETE FROM dm_issue WHERE id = ? AND tenant_id = ? AND deleted = 1", id, user.tenantId());
+            if (changed != 1) throw new BusinessException(ErrorCode.CONFLICT, "问题状态已变化，请刷新后重试");
+            audit(user, "ISSUE_PURGE", projectIds.get(id), id);
         }
     }
 
-    /**
-     * 清空回收站
-     */
     @Transactional
-    public void purgeAll(AuthUser user) {
-        permissions.requireAdmin(user);
-        jdbc.update("DELETE FROM dm_asset WHERE tenant_id = ? AND asset_type = ? AND deleted = 1",
-                user.tenantId(), ASSET_TYPE);
-        audit(user, "ISSUE_PURGE_ALL", 0L);
+    public void purgeAll(Long projectId, AuthUser user) { permissions.requireAdmin(user); long scope = permissions.requireProject(projectId, user); jdbc.update("DELETE FROM dm_issue_relation WHERE tenant_id = ? AND (issue_id IN (SELECT id FROM dm_issue WHERE tenant_id = ? AND project_id = ? AND deleted = 1) OR (related_type = 'MEETING' AND related_id IN (SELECT meeting_id FROM dm_meeting WHERE tenant_id = ? AND project_id = ? AND deleted = 1)))", user.tenantId(), user.tenantId(), scope, user.tenantId(), scope); jdbc.update("DELETE FROM dm_issue WHERE tenant_id = ? AND project_id = ? AND deleted = 1", user.tenantId(), scope); audit(user, "ISSUE_PURGE_ALL", scope, 0L); }
+
+    public String getSystemName(String systemCode, AuthUser user) { if (systemCode == null || systemCode.isBlank()) return null; List<Map<String, Object>> rows = jdbc.queryForList("SELECT COALESCE(short_name, name, '') AS system_name FROM arch_physical_subsystem WHERE tenant_id = ? AND code = ? AND deleted = 0", user.tenantId(), systemCode.trim()); return rows.isEmpty() ? null : String.valueOf(rows.get(0).get("system_name")); }
+    public List<Map<String, Object>> getMeetingOptions(Long projectId, AuthUser user) { long scope = permissions.requireProject(projectId, user); return jdbc.queryForList("SELECT meeting_id AS value, meeting_title AS label FROM dm_meeting WHERE tenant_id = ? AND project_id = ? AND deleted = 0 ORDER BY meeting_title, meeting_id", user.tenantId(), scope); }
+    public List<Map<String, Object>> getTargetTableOptions(Long projectId, AuthUser user) { long scope = permissions.requireProject(projectId, user); return jdbc.queryForList("SELECT table_code AS value, table_name_en AS label FROM dm_target_table WHERE tenant_id = ? AND project_id = ? AND deleted = 0 ORDER BY table_name_en", user.tenantId(), scope); }
+    public List<Map<String, Object>> getTargetFieldOptions(Long tableCode, AuthUser user) { if (tableCode == null) return List.of(); List<Long> projects = jdbc.queryForList("SELECT project_id FROM dm_target_table WHERE table_code = ? AND tenant_id = ? AND deleted = 0", Long.class, tableCode, user.tenantId()); if (projects.isEmpty()) return List.of(); permissions.requireAccessible(projects.get(0), user); return jdbc.queryForList("SELECT field_code AS value, field_name_en AS label FROM dm_target_table_field WHERE tenant_id = ? AND table_code = ? AND deleted = 0 ORDER BY field_name_en", user.tenantId(), tableCode); }
+
+    private String baseSelect(boolean deleted) {
+        return "SELECT i.id, i.project_id, p.project_name, i.issue_code AS asset_code, i.issue_name AS asset_name, i.granularity, i.system_code AS systemCode, COALESCE(s.short_name, s.name) AS systemName, i.issue_source AS issueSource, i.defect_type AS defectType, i.issue_description AS issueDescription, i.solution, i.meeting_conclusion AS meetingConclusion, i.processing_steps AS processingSteps, i.business_scenario AS businessScenario, i.handler, i.responsible_party AS responsibleParty, i.keywords, i.frequency, i.owner_id, i.created_at, i.updated_at, i.created_by, i.updated_by, i.deleted_by, i.deleted_at, u1.display_name AS created_by_name, u2.display_name AS updated_by_name, u3.display_name AS deleted_by_name, "
+                + "(SELECT GROUP_CONCAT(m.meeting_title ORDER BY m.meeting_title SEPARATOR ', ') FROM dm_issue_relation r JOIN dm_meeting m ON m.meeting_id = r.related_id AND m.tenant_id = r.tenant_id AND m.deleted = 0 WHERE r.tenant_id = i.tenant_id AND r.issue_id = i.id AND r.related_type = 'MEETING') AS relatedMeetingMinuteNames, "
+                + "(SELECT GROUP_CONCAT(t.table_name_en ORDER BY t.table_name_en SEPARATOR ', ') FROM dm_issue_relation r JOIN dm_target_table t ON t.table_code = r.related_id AND t.tenant_id = r.tenant_id AND t.deleted = 0 WHERE r.tenant_id = i.tenant_id AND r.issue_id = i.id AND r.related_type = 'TABLE') AS relatedTableNames, "
+                + "(SELECT GROUP_CONCAT(f.field_name_en ORDER BY f.field_name_en SEPARATOR ', ') FROM dm_issue_relation r JOIN dm_target_table_field f ON f.field_code = r.related_id AND f.tenant_id = r.tenant_id AND f.deleted = 0 WHERE r.tenant_id = i.tenant_id AND r.issue_id = i.id AND r.related_type = 'FIELD') AS relatedFieldNames "
+                + "FROM dm_issue i LEFT JOIN pm_project p ON i.project_id = p.id AND p.tenant_id = i.tenant_id AND p.deleted = 0 LEFT JOIN arch_physical_subsystem s ON s.code = i.system_code AND s.tenant_id = i.tenant_id AND s.deleted = 0 LEFT JOIN sys_user u1 ON u1.id = i.created_by AND u1.tenant_id = i.tenant_id LEFT JOIN sys_user u2 ON u2.id = i.updated_by AND u2.tenant_id = i.tenant_id LEFT JOIN sys_user u3 ON u3.id = i.deleted_by AND u3.tenant_id = i.tenant_id WHERE i.tenant_id = ? AND i.deleted = " + (deleted ? "1" : "0");
     }
 
-    // ============ 关联数据查询 ============
-
-    /**
-     * 获取项目选项列表
-     */
-    public List<Map<String, Object>> getProjectOptions(AuthUser user) {
-        return jdbc.queryForList(
-                "SELECT id AS value, project_name AS label FROM pm_project WHERE tenant_id = ? AND deleted = 0 ORDER BY project_name",
-                user.tenantId());
-    }
-
-    /**
-     * 获取系统选项列表（只查当前项目相关的系统）
-     */
-    public List<Map<String, Object>> getSystemOptions(Long projectId, AuthUser user) {
-        if (projectId == null) return List.of();
-        return jdbc.queryForList(
-                "SELECT c.physical_subsystem_code AS value, CONCAT(c.physical_subsystem_code, ' - ', COALESCE(s.short_name, s.name, '')) AS label "
-                        + "FROM dm_component c "
-                        + "LEFT JOIN arch_physical_subsystem s ON s.tenant_id = c.tenant_id AND s.code = c.physical_subsystem_code AND s.deleted = 0 "
-                        + "WHERE c.tenant_id = ? AND c.project_id = ? AND c.deleted = 0 ORDER BY c.physical_subsystem_code",
-                user.tenantId(), projectId);
-    }
-
-    /**
-     * 获取系统名称（根据系统编号）
-     */
-    public String getSystemName(String systemCode, AuthUser user) {
-        if (systemCode == null || systemCode.isBlank()) return null;
-        List<Map<String, Object>> rows = jdbc.queryForList(
-                "SELECT COALESCE(short_name, name, '') AS system_name FROM arch_physical_subsystem WHERE tenant_id = ? AND code = ? AND deleted = 0",
-                user.tenantId(), systemCode.trim());
-        if (rows.isEmpty()) return null;
-        return String.valueOf(rows.get(0).get("system_name"));
-    }
-
-    /**
-     * 获取会议纪要选项列表（只查当前项目相关的）
-     */
-    public List<Map<String, Object>> getMeetingOptions(Long projectId, AuthUser user) {
-        if (projectId == null) return List.of();
-        return jdbc.queryForList(
-                "SELECT id AS value, asset_name AS label FROM dm_asset WHERE tenant_id = ? AND project_id = ? AND asset_type = 'MEETING' AND deleted = 0 ORDER BY asset_name",
-                user.tenantId(), projectId);
-    }
-
-    /**
-     * 获取目标表选项列表（只查当前项目相关的）
-     */
-    public List<Map<String, Object>> getTargetTableOptions(Long projectId, AuthUser user) {
-        if (projectId == null) return List.of();
-        return jdbc.queryForList(
-                "SELECT id AS value, table_name_en AS label FROM dm_target_table WHERE tenant_id = ? AND project_id = ? AND deleted = 0 ORDER BY table_name_en",
-                user.tenantId(), projectId);
-    }
-
-    /**
-     * 获取目标表字段选项列表（根据表ID）
-     */
-    public List<Map<String, Object>> getTargetFieldOptions(Long tableId, AuthUser user) {
-        if (tableId == null) return List.of();
-        return jdbc.queryForList(
-                "SELECT id AS value, field_name_en AS label FROM dm_target_table_field WHERE tenant_id = ? AND table_id = ? AND deleted = 0 ORDER BY field_name_en",
-                user.tenantId(), tableId);
-    }
-
-    // ============ 内部工具 ============
-
-    private Map<String, Object> findByIdInternal(long id, long tenantId, boolean deleted) {
-        List<Map<String, Object>> rows = jdbc.queryForList(
-                "SELECT a.id, a.project_id, p.project_name, a.asset_code, a.asset_name, a.structured_data, "
-                        + "a.owner_id, a.created_at, a.updated_at, a.created_by, a.updated_by, "
-                        + "a.deleted_by, a.deleted_at, "
-                        + "u1.display_name AS created_by_name, u2.display_name AS updated_by_name, "
-                        + "u3.display_name AS deleted_by_name "
-                        + "FROM dm_asset a "
-                        + "LEFT JOIN pm_project p ON a.project_id = p.id AND p.tenant_id = a.tenant_id AND p.deleted = 0 "
-                        + "LEFT JOIN sys_user u1 ON u1.id = a.created_by AND u1.tenant_id = a.tenant_id "
-                        + "LEFT JOIN sys_user u2 ON u2.id = a.updated_by AND u2.tenant_id = a.tenant_id "
-                        + "LEFT JOIN sys_user u3 ON u3.id = a.deleted_by AND u3.tenant_id = a.tenant_id "
-                        + "WHERE a.id = ? AND a.tenant_id = ? AND a.asset_type = '" + ASSET_TYPE + "' AND a.deleted = ?",
-                id, tenantId, deleted ? 1 : 0);
-        if (rows.isEmpty()) throw new BusinessException(ErrorCode.BAD_REQUEST, "问题不存在");
-        Map<String, Object> result = rows.get(0);
-        // 从关联表查询关联的会议纪要ID列表
-        List<Long> relatedMeetingIds = getRelatedMeetingIds(id, tenantId);
-        result.put("relatedMeetingMinutes", relatedMeetingIds);
-        // 从关联表查询关联的目标表ID列表
-        List<Long> relatedTableIds = getRelatedTableIds(id, tenantId);
-        result.put("relatedTables", relatedTableIds);
-        // 从关联表查询关联的字段ID列表
-        List<Long> relatedFieldIds = getRelatedFieldIds(id, tenantId);
-        result.put("relatedFields", relatedFieldIds);
-        return result;
-    }
-
-    @SuppressWarnings("unchecked")
-    private Map<String, Object> buildStructuredData(Map<String, Object> body) {
-        Map<String, Object> sd = new LinkedHashMap<>();
-        sd.put("granularity", optStr(body.get("granularity")));
-        sd.put("systemCode", optStr(body.get("systemCode")));
-        sd.put("systemName", optStr(body.get("systemName")));
-        sd.put("issueSource", optStr(body.get("issueSource")));
-        sd.put("defectType", optStr(body.get("defectType")));
-        sd.put("issueDescription", optStr(body.get("issueDescription")));
-        sd.put("solution", optStr(body.get("solution")));
-        sd.put("meetingConclusion", optStr(body.get("meetingConclusion")));
-        sd.put("processingSteps", optStr(body.get("processingSteps")));
-        sd.put("businessScenario", optStr(body.get("businessScenario")));
-        sd.put("handler", optStr(body.get("handler")));
-        sd.put("responsibleParty", optStr(body.get("responsibleParty")));
-        // 关键字索引（列表）
-        sd.put("keywords", normalizeList(body.get("keywords")));
-        // 关联纪要已迁移至 dm_asset_relation 表，不再存储在 structured_data 中
-        sd.put("frequency", optStr(body.get("frequency")));
-        // 关联表和关联字段已迁移至 dm_asset_relation 表，不再存储在 structured_data 中
-        return sd;
-    }
-
-    private List<Object> normalizeList(Object value) {
-        if (value == null) return new ArrayList<>();
-        if (value instanceof List) return new ArrayList<>((List<?>) value);
-        return new ArrayList<>();
-    }
-
-    private String optStr(Object value) {
-        if (value == null) return null;
-        String s = String.valueOf(value).trim();
-        return s.isEmpty() ? null : s;
-    }
-
-    private String text(Object value, String field) {
-        if (value == null || String.valueOf(value).trim().isEmpty()) {
-            throw new BusinessException(ErrorCode.BAD_REQUEST, field + " 不能为空");
-        }
-        return String.valueOf(value).trim();
-    }
-
-    private long number(Object value, String field) {
-        try {
-            return Long.parseLong(text(value, field));
-        } catch (NumberFormatException ex) {
-            throw new BusinessException(ErrorCode.BAD_REQUEST, field + " 必须为数字");
+    private void appendFilters(StringBuilder sql, List<Object> args, long projectId, String granularity, String systemCode, String issueSource, String defectType, String frequency, String keyword, boolean deleted) {
+        sql.append(" AND i.project_id = ?"); args.add(projectId);
+        if (!deleted && granularity != null && !granularity.isBlank()) { sql.append(" AND i.granularity = ?"); args.add(granularity); }
+        if (!deleted && systemCode != null && !systemCode.isBlank()) { sql.append(" AND i.system_code = ?"); args.add(systemCode.trim()); }
+        if (!deleted && issueSource != null && !issueSource.isBlank()) { sql.append(" AND i.issue_source = ?"); args.add(issueSource); }
+        if (!deleted && defectType != null && !defectType.isBlank()) { sql.append(" AND i.defect_type = ?"); args.add(defectType); }
+        if (!deleted && frequency != null && !frequency.isBlank()) { sql.append(" AND i.frequency = ?"); args.add(frequency); }
+        if (keyword != null && !keyword.isBlank()) {
+            String value = "%" + keyword.trim() + "%";
+            sql.append(" AND (i.issue_code LIKE ? OR i.issue_name LIKE ? OR i.keywords LIKE ?)");
+            args.add(value); args.add(value); args.add(value);
         }
     }
 
-    private String json(Object value) {
-        try {
-            return objectMapper.writeValueAsString(value);
-        } catch (JsonProcessingException ex) {
-            throw new BusinessException(ErrorCode.BAD_REQUEST, "JSON 序列化失败");
+    public List<Map<String, Object>> exportRows(Long projectId, String granularity, String systemCode, String issueSource, String defectType, String frequency, String keyword, AuthUser user) {
+        long scope = permissions.requireProject(projectId, user);
+        StringBuilder sql = new StringBuilder(baseSelect(false));
+        List<Object> args = new ArrayList<>(List.of(user.tenantId()));
+        appendFilters(sql, args, scope, granularity, systemCode, issueSource, defectType, frequency, keyword, false);
+        sql.append(" ORDER BY i.updated_at DESC, i.id DESC");
+        return jdbc.queryForList(sql.toString(), args.toArray());
+    }
+    private Map<String, Object> findByIdInternal(long id, long tenantId, boolean deleted) { List<Map<String, Object>> rows = jdbc.queryForList(baseSelect(deleted) + " AND i.id = ?", tenantId, id); if (rows.isEmpty()) throw new BusinessException(ErrorCode.BAD_REQUEST, "问题不存在"); Map<String, Object> result = rows.get(0); result.put("relatedMeetingMinutes", relationIds(id, tenantId, "MEETING")); result.put("relatedTables", relationIds(id, tenantId, "TABLE")); result.put("relatedFields", relationIds(id, tenantId, "FIELD")); return result; }
+    private List<Long> relationIds(long issueId, long tenantId, String type) { return jdbc.queryForList("SELECT related_id FROM dm_issue_relation WHERE tenant_id = ? AND issue_id = ? AND related_type = ?", Long.class, tenantId, issueId, type); }
+    private void saveRelations(long issueId, long projectId, Map<String, Object> body, AuthUser user) {
+        if (body.containsKey("relatedMeetingMinutes")) saveRelationType(issueId, projectId, body.get("relatedMeetingMinutes"), "MEETING", user);
+        if (body.containsKey("relatedTables")) saveRelationType(issueId, projectId, body.get("relatedTables"), "TABLE", user);
+        if (body.containsKey("relatedFields")) saveRelationType(issueId, projectId, body.get("relatedFields"), "FIELD", user);
+        ensureFieldRelationsBelongToRelatedTables(issueId, user);
+    }
+
+    private void saveRelationType(long issueId, long projectId, Object raw, String targetType, AuthUser user) {
+        List<Long> targetIds = new ArrayList<>();
+        for (Object value : asList(raw)) {
+            long targetId;
+            try { targetId = Long.parseLong(String.valueOf(value)); }
+            catch (NumberFormatException ex) { throw new BusinessException(ErrorCode.BAD_REQUEST, "关联目标编号无效"); }
+            if (!targetIds.contains(targetId)) targetIds.add(targetId);
+        }
+        for (Long targetId : targetIds) ensureRelationTarget(targetId, targetType, projectId, user);
+        jdbc.update("DELETE FROM dm_issue_relation WHERE tenant_id = ? AND issue_id = ? AND related_type = ?", user.tenantId(), issueId, targetType);
+        for (Long targetId : targetIds) {
+            jdbc.update("INSERT INTO dm_issue_relation (tenant_id, issue_id, related_type, related_id, created_by) VALUES (?, ?, ?, ?, ?)", user.tenantId(), issueId, targetType, targetId, user.id());
         }
     }
 
-    private boolean exists(String sql, Object... args) {
-        Integer count = jdbc.queryForObject(sql, Integer.class, args);
-        return count != null && count > 0;
+    private void ensureRelationTarget(long id, String type, long projectId, AuthUser user) {
+        String sql = switch (type) {
+            case "MEETING" -> "SELECT COUNT(*) FROM dm_meeting WHERE meeting_id = ? AND tenant_id = ? AND project_id = ? AND deleted = 0";
+            case "TABLE" -> "SELECT COUNT(*) FROM dm_target_table WHERE table_code = ? AND tenant_id = ? AND project_id = ? AND deleted = 0";
+            case "FIELD" -> "SELECT COUNT(*) FROM dm_target_table_field f JOIN dm_target_table t ON t.table_code = f.table_code AND t.tenant_id = f.tenant_id WHERE f.field_code = ? AND f.tenant_id = ? AND t.project_id = ? AND f.deleted = 0 AND t.deleted = 0";
+            default -> throw new BusinessException(ErrorCode.BAD_REQUEST, "不支持的关联类型");
+        };
+        if (!exists(sql, id, user.tenantId(), projectId)) throw new BusinessException(ErrorCode.BAD_REQUEST, "关联目标不存在、项目不一致或无权访问");
     }
 
-    private void ensureProject(long id, AuthUser user) {
-        if (!exists("SELECT COUNT(*) FROM pm_project WHERE id = ? AND tenant_id = ? AND deleted = 0", id, user.tenantId())) {
-            throw new BusinessException(ErrorCode.BAD_REQUEST, "项目不存在");
-        }
+    private void ensureFieldRelationsBelongToRelatedTables(long issueId, AuthUser user) {
+        String sql = "SELECT COUNT(*) FROM dm_issue_relation rf JOIN dm_target_table_field f ON f.field_code = rf.related_id AND f.tenant_id = rf.tenant_id LEFT JOIN dm_issue_relation rt ON rt.tenant_id = rf.tenant_id AND rt.issue_id = rf.issue_id AND rt.related_type = 'TABLE' AND rt.related_id = f.table_code WHERE rf.tenant_id = ? AND rf.issue_id = ? AND rf.related_type = 'FIELD' AND rt.id IS NULL";
+        if (exists(sql, user.tenantId(), issueId)) throw new BusinessException(ErrorCode.BAD_REQUEST, "关联字段必须属于已关联的目标表");
     }
-
-    /**
-     * 保存问题与会议纪要的关联关系到 dm_asset_relation 表
-     */
-    private void saveMeetingRelations(long issueId, Object meetingMinutesObj, AuthUser user) {
-        // 先删除该问题的所有会议纪要关联
-        jdbc.update("DELETE FROM dm_asset_relation WHERE tenant_id = ? AND source_asset_id = ? AND source_asset_type = ? AND target_asset_type = ?",
-                user.tenantId(), issueId, "ISSUE", "MEETING");
-
-        List<?> meetingIds = normalizeList(meetingMinutesObj);
-        if (meetingIds.isEmpty()) {
-            return;
-        }
-
-        for (Object meetingIdObj : meetingIds) {
-            long meetingId;
-            try {
-                meetingId = Long.parseLong(String.valueOf(meetingIdObj));
-            } catch (NumberFormatException e) {
-                continue;
-            }
-            long relationId = nextId();
-            jdbc.update("INSERT INTO dm_asset_relation (id, tenant_id, source_asset_id, source_asset_type, target_asset_id, target_asset_type, created_by) VALUES (?, ?, ?, ?, ?, ?, ?)",
-                    relationId, user.tenantId(), issueId, "ISSUE", meetingId, "MEETING", user.id());
-        }
+    private void ensureCodeAvailable(long projectId, String code, Long currentId, AuthUser user) { String sql = "SELECT COUNT(*) FROM dm_issue WHERE tenant_id = ? AND project_id = ? AND issue_code = ?" + (currentId == null ? "" : " AND id <> ?"); List<Object> args = new ArrayList<>(List.of(user.tenantId(), projectId, code)); if (currentId != null) args.add(currentId); if (exists(sql, args.toArray())) throw new BusinessException(ErrorCode.CONFLICT, "问题编号在该项目下已存在（含已删除记录）"); }
+    private void validateEnums(Map<String, Object> body, AuthUser user) {
+        codeValues.requireActive(DataMigrationCodeValueService.DM_ISSUE_GRANULARITY, "颗粒度", stringValue(body.get("granularity")), user);
+        codeValues.requireActive(DataMigrationCodeValueService.DM_ISSUE_SOURCE, "问题来源", stringValue(body.get("issueSource")), user);
+        codeValues.requireActive(DataMigrationCodeValueService.DM_DEFECT_TYPE, "缺陷类型", stringValue(body.get("defectType")), user);
+        codeValues.requireActive(DataMigrationCodeValueService.DM_ISSUE_FREQUENCY, "问题频率", stringValue(body.get("frequency")), user);
     }
-
-    /**
-     * 查询问题关联的会议纪要ID列表
-     */
-    private List<Long> getRelatedMeetingIds(long issueId, long tenantId) {
-        return jdbc.queryForList(
-                "SELECT target_asset_id FROM dm_asset_relation WHERE tenant_id = ? AND source_asset_id = ? AND source_asset_type = ? AND target_asset_type = ?",
-                Long.class, tenantId, issueId, "ISSUE", "MEETING");
+    private static String stringValue(Object value) {
+        return value == null ? null : String.valueOf(value).trim();
     }
-
-    /**
-     * 保存问题与目标表的关联关系到 dm_asset_relation 表
-     */
-    private void saveTableRelations(long issueId, Object tablesObj, AuthUser user) {
-        // 先删除该问题的所有目标表关联
-        jdbc.update("DELETE FROM dm_asset_relation WHERE tenant_id = ? AND source_asset_id = ? AND source_asset_type = ? AND target_asset_type = ?",
-                user.tenantId(), issueId, "ISSUE", "TABLE");
-
-        List<?> tableIds = normalizeList(tablesObj);
-        if (tableIds.isEmpty()) {
-            return;
-        }
-
-        for (Object tableIdObj : tableIds) {
-            long tableId;
-            try {
-                tableId = Long.parseLong(String.valueOf(tableIdObj));
-            } catch (NumberFormatException e) {
-                continue;
-            }
-            long relationId = nextId();
-            jdbc.update("INSERT INTO dm_asset_relation (id, tenant_id, source_asset_id, source_asset_type, target_asset_id, target_asset_type, created_by) VALUES (?, ?, ?, ?, ?, ?, ?)",
-                    relationId, user.tenantId(), issueId, "ISSUE", tableId, "TABLE", user.id());
-        }
+    private void ensureProject(long id, AuthUser user) { permissions.requireAccessible(id, user); }
+    private void ensureSystemCode(long projectId, String systemCode, AuthUser user) { if (systemCode != null && !exists("SELECT COUNT(*) FROM dm_component WHERE tenant_id = ? AND project_id = ? AND system_code = ? AND enabled = 1", user.tenantId(), projectId, systemCode)) throw new BusinessException(ErrorCode.BAD_REQUEST, "系统编号不属于所选项目或已停用"); }
+    private static int normalizePageSize(int size) { return PAGE_SIZES.contains(size) ? size : 20; }
+    private boolean exists(String sql, Object... args) { Integer count = jdbc.queryForObject(sql, Integer.class, args); return count != null && count > 0; }
+    private static String text(Object value, String field) { if (value == null || String.valueOf(value).trim().isEmpty()) throw new BusinessException(ErrorCode.BAD_REQUEST, field + " 不能为空"); return String.valueOf(value).trim(); }
+    private static String textOrNull(Object value) { if (value == null) return null; String text = String.valueOf(value).trim(); return text.isEmpty() ? null : text; }
+    private static long number(Object value, String field) { try { return Long.parseLong(text(value, field)); } catch (NumberFormatException ex) { throw new BusinessException(ErrorCode.BAD_REQUEST, field + " 必须为数字"); } }
+    private static String keywords(Object value) { if (value == null) return null; if (value instanceof Collection<?> c) return c.stream().map(String::valueOf).map(String::trim).filter(s -> !s.isEmpty()).distinct().reduce((a, b) -> a + "," + b).orElse(null); return textOrNull(value); }
+    private static List<?> asList(Object value) { return value instanceof Collection<?> c ? new ArrayList<>(c) : value == null ? List.of() : List.of(value); }
+    private static List<Long> normalizeIds(List<Long> ids) { return ids == null ? List.of() : ids.stream().filter(Objects::nonNull).distinct().toList(); }
+    private static BusinessException issueCodeConflict(DataIntegrityViolationException cause) {
+        BusinessException conflict = new BusinessException(ErrorCode.CONFLICT, "问题编号在该项目下已存在");
+        conflict.initCause(cause);
+        return conflict;
     }
-
-    /**
-     * 保存问题与字段的关联关系到 dm_asset_relation 表
-     */
-    private void saveFieldRelations(long issueId, Object fieldsObj, AuthUser user) {
-        // 先删除该问题的所有字段关联
-        jdbc.update("DELETE FROM dm_asset_relation WHERE tenant_id = ? AND source_asset_id = ? AND source_asset_type = ? AND target_asset_type = ?",
-                user.tenantId(), issueId, "ISSUE", "FIELD");
-
-        List<?> fieldIds = normalizeList(fieldsObj);
-        if (fieldIds.isEmpty()) {
-            return;
-        }
-
-        for (Object fieldIdObj : fieldIds) {
-            long fieldId;
-            try {
-                fieldId = Long.parseLong(String.valueOf(fieldIdObj));
-            } catch (NumberFormatException e) {
-                continue;
-            }
-            long relationId = nextId();
-            jdbc.update("INSERT INTO dm_asset_relation (id, tenant_id, source_asset_id, source_asset_type, target_asset_id, target_asset_type, created_by) VALUES (?, ?, ?, ?, ?, ?, ?)",
-                    relationId, user.tenantId(), issueId, "ISSUE", fieldId, "FIELD", user.id());
-        }
-    }
-
-    /**
-     * 查询问题关联的目标表ID列表
-     */
-    private List<Long> getRelatedTableIds(long issueId, long tenantId) {
-        return jdbc.queryForList(
-                "SELECT target_asset_id FROM dm_asset_relation WHERE tenant_id = ? AND source_asset_id = ? AND source_asset_type = ? AND target_asset_type = ?",
-                Long.class, tenantId, issueId, "ISSUE", "TABLE");
-    }
-
-    /**
-     * 查询问题关联的字段ID列表
-     */
-    private List<Long> getRelatedFieldIds(long issueId, long tenantId) {
-        return jdbc.queryForList(
-                "SELECT target_asset_id FROM dm_asset_relation WHERE tenant_id = ? AND source_asset_id = ? AND source_asset_type = ? AND target_asset_type = ?",
-                Long.class, tenantId, issueId, "ISSUE", "FIELD");
-    }
-
-    private void audit(AuthUser user, String operation, long id) {
-        jdbc.update("INSERT INTO dm_operation_log (tenant_id, actor_id, operation_code, entity_type, entity_id) VALUES (?, ?, ?, 'ISSUE', ?)",
-                user.tenantId(), user.id(), operation, id);
-    }
-
-    private long nextId() {
-        return System.currentTimeMillis() * 1000 + ThreadLocalRandom.current().nextInt(1000);
-    }
+    private void audit(AuthUser user, String operation, long projectId, long id) { jdbc.update("INSERT INTO dm_operation_log (tenant_id, actor_id, project_id, operation_code, entity_type, entity_id) VALUES (?, ?, ?, ?, 'ISSUE', ?)", user.tenantId(), user.id(), projectId, operation, id); }
+    private long nextId() { return System.currentTimeMillis() * 1000 + ThreadLocalRandom.current().nextInt(1000); }
 }
